Upfraded task applying page

--- a/StudHelper/StudHelper/Pages/Index.cshtml
+++ b/StudHelper/StudHelper/Pages/Index.cshtml
@@ -6,6 +6,8 @@
 
 <div class=" header">
     <h1>Task name </h1>
+    <p>Employer: Mike Vazovski | Pricing: from 5$ to 10$</p>
+    
 </div>
 
 <div class=" maininfo">
@@ -20,20 +22,35 @@
         </p>
     </div>
     <h4>Required Skils</h4>
-
-    <div class=" skills">
-        <ul>
-            <li>Programming</li>
-            <li>Walking</li>
-            <li>Sleeping</li>
-            <li>Gaming</li>
-            <li>Writing</li>
-            <li>Smoking</li>
-        </ul>
+    <div class=" skills&files">
+        <div class=" skills">
+            <ul>
+                <li>Programming</li>
+                <li>Walking</li>
+                <li>Sleeping</li>
+                <li>Gaming</li>
+                <li>Writing</li>
+                <li>Smoking</li>
+            </ul>
+        </div>
+        <div class="files ">
+            <h4>Files</h4>
+            <ul>
+                <li><a href =" google.com">index.html</a></li>
+                <li><a href =" google.com">style.css</a></li>
+                <li><a href =" google.com">scripts.js</a></li>
+            </ul>
+        </div>
     </div>
+    
 
     <div class="userInputInfo">
         <label for="userInput">Write Your Description HERE</label><br />
-        <textarea id="userInput" name=" userInput" rows=" 5" cols=" 90"></textarea>
+        <textarea id="userInput" name=" userInput" rows=" 5" cols=" 90"></textarea><br />
+        <label for=" userPrice">Input Suggested Price</label>
+        <input id="userPrice" name="userPrice" type="text" />
+        <button name="applyButton" class=" button">Apply</button>
     </div>
+
+    
 </div>
