--- a/StudHelper/StudHelper/Pages/Shared/_Layout.cshtml
+++ b/StudHelper/StudHelper/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Tasks/index">Tasks</a>
                         </li>
+                        <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/MyTasks/index">My Tasks</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
