--- a/StudHelper/StudHelper/Pages/Tasks/Details.cshtml
+++ b/StudHelper/StudHelper/Pages/Tasks/Details.cshtml
@@ -1,36 +1,50 @@
 ﻿@page
 @model StudHelper.Pages.Tasks.DetailsModel
 
-<div>
-    <h4>Task</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.MinPrice)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.MinPrice)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.MaxPrice)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.MaxPrice)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.Employer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.Employer.UserName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Index">Back to List</a>
+<div class="deb">
+    <div class=" header">
+        <h1>@Html.DisplayFor(model => model.Task.Id) </h1>
+        <p>Employer: @Html.DisplayFor(model => model.Task.Employer.UserName) | Pricing: from @Html.DisplayFor(model => model.Task.MinPrice)$ to @Html.DisplayFor(model => model.Task.MaxPrice)$</p>
+
+    </div>
+
+    <div class=" maininfo">
+        <div class="description">
+            <p>
+                @Html.DisplayFor(model => model.Task.Description)
+            </p>
+        </div>
+       @* <h4>Required Skils</h4>
+        <div class=" skills&files">
+            <div class=" skills">
+                <ul>
+                    @foreach (var skill in Model.Task.TaskSkills)
+                    {
+                        <li>@Html.DisplayFor(mskill => skill.Skill)</li>
+                    }
+                </ul>
+            </div>
+            <div class="files ">
+                <h4>Files</h4>
+                <ul>
+                    <li><a href=" google.com">index.html</a></li>
+                    <li><a href=" google.com">style.css</a></li>
+                    <li><a href=" google.com">scripts.js</a></li>
+                </ul>
+            </div>
+        </div>*@
+
+
+        <div class="userInputInfo">
+            <label for="userInput">Write Your Description HERE</label><br />
+            <textarea id="userInput" name=" userInput" rows=" 5" cols=" 90"></textarea><br />
+            <label for=" userPrice">Input Suggested Price</label>
+            <input id="userPrice" name="userPrice" type="text" />
+            <button name="applyButton" class=" button">Apply</button>
+        </div>
+
+    </div>
+    <div>
+        <a asp-page="./Index">Back to List</a>
+    </div>
 </div>
