--- a/StudHelper/StudHelper/Pages/Index.cshtml
+++ b/StudHelper/StudHelper/Pages/Index.cshtml
@@ -3,8 +3,22 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<style>
+    p.dline {
+        line-height: 2.5;
+    }
 
+    P {
+        line-height: 2.9em;
+    }
+</style>
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <style>
+        body {
+            background: #c1cfd0;
+            color: #fff;
+        }
+    </style>
+    <h3>This website is built with an initiative to help students find books, solution manuals, past papers e.t.c and lectures recommended by their course teachers. Moreover students can also browse our student corner tab to view latest interview questions, GRE preparation techniques & resources OR to download softwares.</h3>
 </div>
