--- a/StudHelper/StudHelper/Pages/Privacy.cshtml
+++ b/StudHelper/StudHelper/Pages/Privacy.cshtml
@@ -4,5 +4,10 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-
+<style>
+    body {
+        background: #c1cfd0;
+        color: #fff;
+    }
+</style>
 <p>Use this page to detail your site's privacy policy.</p>
