--- a/StudHelper/StudHelper/Pages/MyTasks/Create.cshtml
+++ b/StudHelper/StudHelper/Pages/MyTasks/Create.cshtml
@@ -16,7 +16,8 @@
             
             <div class="form-group">
                 <label asp-for="Task.Description" class="control-label"></label>
-                <input asp-for="Task.Description" class="form-control" />
+                
+                <textarea asp-for="Task.Description" id="userInput" rows=" 5" cols=" 90" class=" form-control"></textarea>
                 <span asp-validation-for="Task.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
