--- a/StudHelper/StudHelper/Pages/MyTasks/Details.cshtml
+++ b/StudHelper/StudHelper/Pages/MyTasks/Details.cshtml
@@ -30,41 +30,12 @@
             @Html.DisplayFor(model => model.Task.Status)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.EmployerReviewDescr)
+            Employee
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.EmployerReviewDescr)
+            @Html.DisplayFor(model => model.Task.Employee.UserName)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.EmployeeReviewDescr)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.EmployeeReviewDescr)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.EmployerRating)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.EmployerRating)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.EmployeeRating)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.EmployeeRating)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.Employee)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.Employee.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Task.Employer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Task.Employer.Id)
-        </dd>
+        
     </dl>
 </div>
 <div>
