--- a/StudHelper/StudHelper/Pages/Index.cshtml
+++ b/StudHelper/StudHelper/Pages/Index.cshtml
@@ -4,53 +4,17 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class=" header">
-    <h1>Task name </h1>
-    <p>Employer: Mike Vazovski | Pricing: from 5$ to 10$</p>
-    
-</div>
 
-<div class=" maininfo">
-    <div class="description">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.
-        </p>
-    </div>
-    <h4>Required Skils</h4>
-    <div class=" skills&files">
-        <div class=" skills">
-            <ul>
-                <li>Programming</li>
-                <li>Walking</li>
-                <li>Sleeping</li>
-                <li>Gaming</li>
-                <li>Writing</li>
-                <li>Smoking</li>
-            </ul>
-        </div>
-        <div class="files ">
-            <h4>Files</h4>
-            <ul>
-                <li><a href =" google.com">index.html</a></li>
-                <li><a href =" google.com">style.css</a></li>
-                <li><a href =" google.com">scripts.js</a></li>
-            </ul>
-        </div>
-    </div>
-    
-
-    <div class="userInputInfo">
-        <label for="userInput">Write Your Description HERE</label><br />
-        <textarea id="userInput" name=" userInput" rows=" 5" cols=" 90"></textarea><br />
-        <label for=" userPrice">Input Suggested Price</label>
-        <input id="userPrice" name="userPrice" type="text" />
-        <button name="applyButton" class=" button">Apply</button>
-    </div>
-
-    
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <style>
+        body {
+            background: #b8cfd0;
+            color: #fff;
+        }
+    </style>
+    <p>This website is built with an initiative to help students find books, solution manuals, 
+    past papers e.t.c and lectures recommended by their course teachers. Moreover students can
+    also browse our student corner tab to view latest interview questions, GRE preparation techniques & 
+    resources OR to download softwares.</p>
 </div>
