--- a/StudHelper/StudHelper/Pages/Offers/Edit.cshtml
+++ b/StudHelper/StudHelper/Pages/Offers/Edit.cshtml
@@ -8,19 +8,20 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Offer.Id" />
-            <div class="form-group">
+            <div class="form-group d-none">
                 <label asp-for="Offer.TaskId" class="control-label"></label>
                 <select asp-for="Offer.TaskId" class="form-control" asp-items="ViewBag.TaskId"></select>
                 <span asp-validation-for="Offer.TaskId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group d-none">
                 <label asp-for="Offer.EmployeeId" class="control-label"></label>
                 <select asp-for="Offer.EmployeeId" class="form-control" asp-items="ViewBag.EmployeeId"></select>
                 <span asp-validation-for="Offer.EmployeeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Offer.Description" class="control-label"></label>
-                <input asp-for="Offer.Description" class="form-control" />
+                <textarea asp-for="Offer.Description" id="userInput" rows=" 5" cols=" 90" class=" form-control"></textarea>
+
                 <span asp-validation-for="Offer.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
