--- a/StudHelper/StudHelper/Pages/Shared/_Layout.cshtml
+++ b/StudHelper/StudHelper/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Tasks/index">Tasks</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/MyTasks/index">My Tasks</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MyTasks/index">My Tasks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Offers/index">My Offers</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
